apps/dssp-21-may-02/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-21-may-02
  namespace: dev
  labels:
    app: dssp-21-may-02
    backstage.io/kubernetes-id: dssp-21-may-02
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-21-may-02
  template:
    metadata:
      labels:
        app: dssp-21-may-02
        backstage.io/kubernetes-id: dssp-21-may-02
        environment: dev
    spec:
      containers:
        - name: dssp-21-may-02
          image: chaitanyapandeygspann/dssp-21-may-02:1.0.1
          ports:
            - containerPort: 8080
