apps/dssp-21-may-02/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-21-may-02
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-21-may-02
    environment: dev
spec:
  selector:
    app: dssp-21-may-02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-21-may-02-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-21-may-02.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-21-may-02
#             port:
#               number: 80
